Omnibox UI Refresh: Animate the text jog when suggestion popup opens.

Many devs have complained that the text moves unexpectedly when the
popup opens. After consulting with UX, we are embracing the text jogging
to make it line up with the suggestions text.

This CL adds an animation to slide the text over, making the text jog
hopefully less jarring.

Bug: 853355
Change-Id: If272e4076e30c967c0211c988e5e9f10300366bf
Reviewed-on: https://chromium-review.googlesource.com/1119400
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571544}
Former-commit-id: de2713606a233481a4ad5ffb469e1af0b5a7805f